feat: Add AI summarization and formatting features
Integrates Google GenAI for AI-powered content generation and summarization.
Adds Markdown rendering capabilities using 'marked' to display AI-generated text.
Includes styling for AI-generated content to improve readability.
Updates package.json and index.html with new dependencies and CDN imports.
Refactors App.tsx to incorporate AI functionalities and new types.
Adds icons for AI (Bot) and Close (X).
Updates README.md and metadata.json with application name.
Introduces new 'KeyMetrics' type for financial data.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-copy-of-interactive-business-plan-presenter",
+  "name": "ver-2-master-interactive-business-plan-presenter",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "react-dom": "^19.2.0",
-    "react": "^19.2.0"
+    "react": "^19.2.0",
+    "@google/genai": "latest",
+    "marked": "latest"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
